force-app/main/default/objects/QuoteLineItem/fields/Last_Quoted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Quoted_Date__c</fullName>
    <label>Last Quoted Date</label>
    <type>Date</type>
</CustomField>