force-app/main/default/objects/QuoteLineItem/fields/Last_Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Quoted_Price__c</fullName>
    <inlineHelpText>Previous quoted unit price for the same account and product. Set by flow.</inlineHelpText>
    <label>Last Price to This Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>