force-app/main/default/objects/QuoteLineItem/fields/Line_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Cost__c</fullName>
    <inlineHelpText>Unit Cost x Quantity. Maintained by flow.</inlineHelpText>
    <label>Line Cost (DEMO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>