force-app/main/default/objects/QuoteLineItem/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <formula>IF(UnitPrice &gt; 0, (UnitPrice - BLANKVALUE(Unit_Cost__c, 0)) / UnitPrice * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (DEMO)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>