force-app/main/default/objects/QuoteLineItem/fields/Supply_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Supply_Period_From__c</fullName>
    <label>Supply Period From</label>
    <type>Date</type>
</CustomField>