force-app/main/default/objects/QuoteLineItem/fields/Supply_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Supply_Period_To__c</fullName>
    <label>Supply Period To</label>
    <type>Date</type>
</CustomField>