force-app/main/default/objects/QuoteLineItem/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <inlineHelpText>DEMO / TO VALIDATE: defaults from Product Standard Cost.</inlineHelpText>
    <label>Unit Cost (DEMO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>